--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,4 +4,7 @@
     <span><img src="/assets/images/logo.png" /></span>
     <span>Side</span>
   </div>
+  <div>
+    <small>{{welcome}}</small>
+  </div>
 </div>
