[upd] languages are welcome

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,7 +4,7 @@
     <span><img src="/assets/images/logo.png" /></span>
     <span>Side</span>
   </div>
-  <div>
+  <div (click)="toggleLanguage()">
     <small>{{welcome}}</small>
   </div>
 </div>
