--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -5,6 +5,6 @@
     <span>Side</span>
   </div>
   <div (click)="toggleLanguage()">
-    <small>{{welcome}}</small>
+    <small class="light-text">{{welcome}}</small>
   </div>
 </div>
