--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -10,7 +10,7 @@
   }
 
   span:nth-child(1) {
-    color: black;
+    color: var(--primary-color);
   }
 
   span:nth-child(2) {
@@ -25,7 +25,7 @@
   }
 
   span:nth-child(3) {
-    color: blue;
+    color: var(--secondary-color);
   }
 
   &:hover {
@@ -41,13 +41,14 @@
 }
 
 .page-container {
-  display        : flex;
-  justify-content: center;
-  align-items    : center;
-  position       : absolute;
-  top            : 0;
-  left           : 0;
-  width          : 100%;
-  height         : 100%;
-  flex-direction : column;
+  display         : flex;
+  justify-content : center;
+  align-items     : center;
+  position        : absolute;
+  top             : 0;
+  left            : 0;
+  width           : 100%;
+  height          : 100%;
+  flex-direction  : column;
+  background-color: var(--primary-bg-color);
 }
