--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,17 @@
 
 * {
   font-family: 'Roboto', sans-serif;
+  transition: color 2s ease, background-color 2s ease;
+}
+
+body {
+  color: var(--primary-color);
 }
 
 small {
   font-size: 0.7em;
+}
+
+.light-text {
+  color: var(--primary-color);
 }
