[add] amplify auth dep

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -7,4 +7,7 @@
   <div (click)="toggleLanguage()">
     <small class="light-text">{{welcome}}</small>
   </div>
+  <div>
+    <a href="http://localhost:3000/signin"><button type="button" class="btn btn-primary">Sign In</button></a>
+  </div>
 </div>
