[add] signin and env

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -8,6 +8,7 @@
     <small class="light-text">{{welcome}}</small>
   </div>
   <div>
-    <a href="http://localhost:3000/signin"><button type="button" class="btn btn-primary">Sign In</button></a>
+    <span *ngIf="email">{{email}}</span>
+    <a *ngIf="!email" href="{{siginUri}}"><button type="button" class="btn btn-primary">Sign In</button></a>
   </div>
 </div>
