--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -8,7 +8,8 @@
     <small class="light-text">{{welcome}}</small>
   </div>
   <div>
-    <span *ngIf="email">{{email}}</span>
+    <div *ngIf="email">{{email}}</div>
+    <button class="btn-primary" (click)="logout()" *ngIf="email">Logout</button>
     <a *ngIf="!email" href="{{siginUri}}"><button type="button" class="btn btn-primary">Sign In</button></a>
   </div>
 </div>
