[upd] trying to make identity an app feature

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import '../node_modules/aws-amplify-angular/theme.css';
 
 * {
   font-family: 'Roboto', sans-serif;
