--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -10,6 +10,6 @@
   <div>
     <div *ngIf="email">{{email}}</div>
     <button class="btn-primary" (click)="logout()" *ngIf="email">Logout</button>
-    <a *ngIf="!email" href="{{siginUri}}"><button type="button" class="btn btn-primary">Sign In</button></a>
+    <!-- <a *ngIf="!email" href="{{siginUri}}"><button type="button" class="btn btn-primary">Sign In</button></a> -->
   </div>
 </div>
